overflow fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,8 +5,6 @@
 body {
   height: 100%;
   width: 100%;
-  overflow-y: hidden;
-  overflow-x: hidden;
 }
 
 html {
